<resources>
    <string name="app_name">Baking App</string>
    <string name="fetching_data">Fetching Data...</string>
    <string name="appwidget_text">Shopping List</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="select_a_recipe">Select a recipe:</string>
    <string name="begin">BEGIN</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="intro">Intro</string>
</resources>
